--- a/ts_items_classes.ipynb
+++ b/ts_items_classes.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "b4d8e655",
+   "id": "a5841b01",
    "metadata": {},
    "outputs": [
     {
@@ -38,6 +38,7 @@
     "import torch\n",
     "\n",
     "\n",
+    "# Base class for creating ts analytic items\n",
     "class ItemBase(ABC):\n",
     "    @classmethod\n",
     "    def add_instance(cls, ins):\n",
@@ -49,6 +50,7 @@
     "        pass\n",
     "    \n",
     "    \n",
+    "# Derivated class for outlier detection\n",
     "class OutlierDetector(ItemBase):\n",
     "    _items = []\n",
     "    def __init__(self, *args):\n",
@@ -59,6 +61,7 @@
     "        print(args)\n",
     "        \n",
     "\n",
+    "# Derivated class for forecasting time series\n",
     "class Forecastor(ItemBase):\n",
     "    _items = []\n",
     "    def __init__(self, *args):\n",
@@ -70,6 +73,7 @@
     "        print(args)\n",
     "\n",
     "        \n",
+    "# Collect multiple items and process them at once\n",
     "class ProcessItems(object):\n",
     "    def __init__(self, items: List = [])->None:\n",
     "        self.items = items\n",
@@ -92,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "c173e3e2",
+   "id": "92a0c0d1",
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "132fd1a8",
+   "id": "a4342fb7",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "589c2023",
+   "id": "9a89baec",
    "metadata": {},
    "outputs": [],
    "source": []
